--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,1 +1,21 @@
-%h1 Voila This is the Placeholder!
+#banner
+  .banner_content
+    %h1 File Cabinet
+    %p Your life work. Organized, always
+    %button= link_to "Enter", new_user_registration_path
+
+#callouts
+  .callout_inner
+    .wrapper
+      .callout
+        %h2 Organize
+        %p Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi .
+        sed do eiusmod tempor incididunt ut labore
+
+#bottom_cta
+  .wrapper
+    %h2 Go Ahead!
+    %br
+    %button= link_to "Join Now", new_user_registration_path 
