--- a/app/views/docs/edit.html.haml
+++ b/app/views/docs/edit.html.haml
@@ -1,5 +1,6 @@
-%h1 New Doc!
+.wrapper_with_padding
+  %h1 New Doc!
 
-= render 'form'
+  = render 'form'
 
-= link_to "Cancel", doc_path
+  = link_to "Cancel", doc_path
